<resources>
    <string name="app_name">JobIg</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Pseudo</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="back">BACK</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="title_activity_instription">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="location_paris">Location : Paris</string>
    <string name="developpeur_web">Developpeur web </string>
    <string name="poste_le_07_02_2019">Posté le: 07/02/2019</string>
    <string name="seed_innov_recrute_de_nouveau_developpeur_web">Seed innov recrute de nouveau developpeur web
    La sociéte Dreamer.Inc dans le cadre de son lancement
    offre une offre pour les de
    La sociéte Dreamer.Inc dans le cadre de son lancement
    offre une offre pour les de
    La socite Dreamer.Inc dans le cadre de son lancement
    offre une offre pour les de
    La socite Dreamer.Inc dans le cadre de son lancement
    offre une offre pour les de
    La socite Dreamer.Inc dans le cadre de son lancement
    offre une offre pour les de
    La socite Dreamer.Inc dans le cadre de son lancement
    offre une offre pour les de
    La socite Dreamer.Inc dans le cadre de son lancement
    offre une offre pour les de
    La socite Dreamer.Inc dans le cadre de son lancement
    offre une offre pour les de
    La socite Dreamer.Inc dans le cadre de son lancement
    offre une offre pour les de </string>
    <string name="esiea">Esiea</string>
    <string name="paris">Paris</string>
    <string name="full_time">Full Time</string>
</resources>
