<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="173dp"
applicationConerRadius="12dp"
android:elevation="8dp"
android:outlineAmbientShadowColor="@color/colorPrimaryLight"
android:layout_marginRight="20dp"
android:layout_marginTop="20dp"
android:layout_marginLeft="20dp">

<LinearLayout
    android:id="@+id/layoutCard"
    android:layout_width="match_parent"
    android:background="@drawable/card_shape2"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:id="@+id/title_offre"
                android:textSize="@dimen/dimensionText"
                android:textColor="@color/colorWhite"
                android:text="@string/developpeur_web"/>
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/company_offre"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimensionSmallText"
                android:layout_marginTop="12dp"
                android:textColor="#F3EEEE"
                android:text="@string/esiea"/>
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/offre_type"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimensionSmallText"
                android:textColor="#F3EEEE"
                android:text="@string/full_time"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="80dp"
                android:id="@+id/itemImage"
                android:layout_height="40dp"
                android:src="@drawable/suitcase"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:id="@+id/location_offre"
            android:textSize="@dimen/dimensionText"
            android:text="@string/paris"
            android:textColor="@color/colorWhite"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poste_le_07_02_2019"
                android:id="@+id/text_date_card_offre"
                android:layout_alignParentRight="true"
                android:textColor="#F3EEEE"
                android:textSize="15sp"
                android:fontFamily="sans-serif"
                android:layout_marginTop="8dp"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>


</androidx.cardview.widget.CardView>