<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.offre.OffreActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:onClick="retour"
                android:src="@drawable/back_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Offres"
                android:textSize="20dp"
                android:textStyle="bold"
                android:theme="@style/AppTheme"
                android:textColor="@color/colorWhite"
                android:background="?attr/colorPrimary"
               />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_offre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:id="@+id/company_logo_offre_activity"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="86dp"

        android:paddingTop="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_above="@id/rl_bottom_offre_activity"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="8dp">

                <TextView
                    android:id="@+id/title_offre_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:paddingBottom="8dp"
                    android:textStyle="bold|italic"
                    android:text="@string/developpeur_web"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="sans-serif"
                    android:textSize="25sp" />


                <TextView
                    android:id="@+id/tv_description_offre_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:textStyle="italic"
                    android:text="@string/seed_innov_recrute_de_nouveau_developpeur_web"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="sans-serif"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/location_offre_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:paddingTop="16dp"
                    android:paddingBottom="4dp"
                    android:text="@string/location_paris"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/create_offre_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:paddingTop="16dp"
                    android:paddingBottom="4dp"
                    android:text="@string/poste_le_07_02_2019"
                    android:textSize="15sp" />
            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/rl_bottom_offre_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingLeft="16dp"
            android:paddingTop="4dp"
            android:paddingRight="16dp"
            android:paddingBottom="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:id="@+id/web_offre"
                        android:padding="8dp"
                        android:src="@drawable/web" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:id="@+id/share_offre"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:padding="8dp"
                        android:src="@drawable/ic_share_white_32dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:id="@+id/apply_offre"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:padding="8dp"
                        android:src="@drawable/ic_check_white_32dp" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>